Bug 914029 - Fix Assertion failure. r=smaug, a=lsblakk